tests/valid_programs/generics/generic_id_fn.duck
use std::io::{println};

fn id<T>(t: T) -> T {
    return t;
}

fn main() {
    let x: String = id<String>("Hallo, Welt");
    x->println();
}
