tests/errors/keyof/generic_fn_return.duck
fn with_keyof_return<T>(val: keyof T) -> keyof T {
    return t;
}

fn main() {
    let x = with_keyof_return<{ username: String }>(5);
}
